--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,8 @@ dependencies = [
     "pandas>=2.0.0",
     "matplotlib>=3.7.0",
     "scipy>=1.10.0",
-    "seaborn>=0.12.0"
+    "seaborn>=0.12.0",
+    "statsmodels>=0.14.6",
 ]
 
 [build-system]
